--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -5,3 +5,5 @@ import { Meta, Story } from "@storybook/addon-docs/blocks"
 # The Policy Lab Design System
 
 This is the documentation of The Policy Lab Design System. The Design System provides guidelines to best practices of representing data visually and reusable react components that implement these guidelines by default.
+
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
