--- a/src/stories/Overview.stories.mdx
+++ b/src/stories/Overview.stories.mdx
@@ -34,7 +34,7 @@ Developers can use Storybook as an environment to develop components in isolatio
 
 ## 3. Use with React-based Static Site Generators (Gatsby and Next.js)
 
-The `design-system` library provides reusable components to integrate data visualizations into any React project. However, most of the contents nowadays are written in `markdown`, which is then rendered by static site generators into html pages. As such, those writing the content do not need to worry about how their content is going to look on the website. The static site generators take care of that. Historically, it was be difficult to include JavaScript content into `markdown`. MDX solves that problem. It can be viewed as an extension of `markdown` that supports `jsx`. It is by far the easiest way that we know of to include the `design-system` library components into a website.
+The `design-system` library provides reusable components to integrate data visualizations into any React project. However, most of the contents nowadays are written in `markdown`, which is then rendered by static site generators into html pages. As such, those writing the content do not need to worry about how their content is going to look on the website. The static site generators take care of that. Historically, it was be difficult to include JavaScript content into `markdown`. MDX solves that problem. It can be viewed as an extension of `markdown` that supports [`jsx`](https://reactjs.org/docs/introducing-jsx.html). It is by far the easiest way that we know of to include the `design-system` library components into a website.
 
 The static site generator [Gatsby.js](https://gatsbyjs.com) has outstanding support for `mdx` files, which is why we recommend using it for creating content on the web. To see how Gatsby works when creating narrative stories with interactive visualizations, please clone [this repo](https://github.com/thepolicylab/design-system-mdx). Next, go to `/content/blog` directory. To create a new story, simply create a new directory, whose name will be the slug used for the website, and within the directory, create an `index.md` or `index.mdx` just like any other `markdown` file. You can easily include `jsx` syntax while writing this file. Please see [this](https://raw.githubusercontent.com/thepolicylab/design-system-mdx/master/content/blog/high-school-dropouts/index.mdx?token=AEJNTY324ZCAOQYN4TO4OU3AG7Y4Q) as an example. This repo is configured so that the `design-system` library is included and can be rendered by the `mdx` engine by default.
 
